welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:24: error: reassignment to val
    cpt=cpt+1
       ^